# zenith-codex

./: .coderabbit.yaml  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PLATFORM-SUPPORT.md  README.md  package-lock.json  package.json  tauri.conf.json  tsconfig.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/tools/: clean.mjs  tauri-build.mjs  tauri-dev.mjs  tauri-env.mjs
.github/workflows/: build.yml
capabilities/: default.json
docs/: RELEASE.md  UPDATES.md
scripts/: clean.mjs  tauri-build.mjs  tauri-dev.mjs  tauri-env.mjs
src/: .env.example  codex_config.rs  key_storage.rs  launcher.rs  main.rs  package.json  platform.rs  tray.rs  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: codex_config.rs  files.rs  key_storage.rs  launcher.rs  main.rs  platform.rs  tray.rs
src/src/: App.tsx  main.tsx  styles.css  tauri.ts
src/src/components/: HistoryPanel.tsx  SettingsPanel.tsx  StatsGrid.tsx  TitleBar.tsx  Toolbar.tsx  TopUpPanel.tsx
src/src/i18n/: resources.ts
src/src/i18n/locales/: en.ts  ru.ts
ui/: index.html  main.js  styles.css
ui/src/: App.tsx  format.ts  styles.css  tauri.ts  vite-env.d.ts
ui/src/components/: HistoryPanel.tsx  SettingsPanel.tsx  StatsGrid.tsx  TitleBar.tsx  Toolbar.tsx  TopUpPanel.tsx
ui/src/i18n/: index.ts
ui/src/i18n/locales/: en.ts  ru.ts
