[package]
name = "zenith-codex"
version = "1.0.2"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
chrono = "0.4"
keyring = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sys-locale = "0.3"
sysinfo = "0.39.3"
tauri = { version = "2.11.2", features = ["image-ico", "image-png", "tray-icon"] }
tauri-plugin-opener = "2.5.4"
tauri-plugin-process = "2.3.0"
tauri-plugin-updater = "2.9.0"
tokio = { version = "1", features = ["time"] }
url = "2"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
incremental = false
